JT-2405 fix blurry person for data viz on new profiles
  - used person icon font for person progress bar
  - updated partial and sass

--- a/app/assets/stylesheets/components/_person-bar-viz.scss
+++ b/app/assets/stylesheets/components/_person-bar-viz.scss
@@ -1,4 +1,5 @@
 .person-bar-viz {
+  $background-gray: #dbe6eb;
   .arrow-down {
     position: relative;
     left: -7px;
@@ -12,18 +13,24 @@
       border-top: 9px solid #b2b2b2;
     }
   }
-  width: 250px;
-  height: 38px;
-  background-color: #dbe6eb;
-
-  .filled {
-    height: 100%;
+  .person-progress {
+    position: relative;
+    white-space: nowrap;
+    font-size: 40px;
+    display: inline-block;
   }
-  .background {
-    width: 250px;
-    height: 38px;
-    background-repeat: repeat-x;
-    background-image: image-url('transparent_person.png');
+  .person-progress > .background {
+    color: $background-gray;
+    display: inline-block;
+  }
+  .person-progress span {
+    display: inline-block;
+  }
+  .person-progress > .foreground {
+   position: absolute;
+   top: 0;
+   left: 0;
+   overflow: hidden;
   }
 }
 
