--- a/app/assets/stylesheets/gs/ratings.scss
+++ b/app/assets/stylesheets/gs/ratings.scss
@@ -71,3 +71,48 @@ $rating10: #439326;
 .rating_scale-5_5 {
   background-color: $color-5-scale-strongly-agree;
 }
+
+
+.rating_color_ {
+  color: $ratingNR;
+}
+
+.rating_color_1 {
+  color: $rating1;
+}
+
+.rating_color_2 {
+  color: $rating2;
+}
+
+.rating_color_3 {
+  color: $rating3;
+}
+
+.rating_color_4 {
+  color: $rating4;
+}
+
+.rating_color_5 {
+  color: $rating5;
+}
+
+.rating_color_6 {
+  color: $rating6;
+}
+
+.rating_color_7 {
+  color: $rating7;
+}
+
+.rating_color_8 {
+  color: $rating8;
+}
+
+.rating_color_9 {
+  color: $rating9;
+}
+
+.rating_color_10 {
+  color: $rating10;
+}
